--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,11 @@ runtime: python
 api_version: 1
 
 handlers:
+- url: /favicon.ico
+  static_files: s/favicon.ico
+  upload: s/favicon.ico
+  expiration: "30d"  
+
 - url: /s
   static_dir: s
   secure: optional
