trackerStatus.py was not being accessed by the scheduled tasks API

--- a/app.yaml
+++ b/app.yaml
@@ -17,7 +17,7 @@ handlers:
 
 - url: /tasks/trackerStatus
   script: tasks/trackerStatus.py
-  login: required
+  login: admin
 
 - url: /
   script: root.py
