added flushmemcache, simplified the pick of the tracker to be faster, urllib.unquote() is expensive

--- a/app.yaml
+++ b/app.yaml
@@ -34,7 +34,11 @@ handlers:
 - url: /scrape
   script: main.py
   secure: optional
-
+  
+- url: /flushmemcache
+  script: flushmemcache.py
+  secure: optional
+  
 - url: .*
   script: main.py
   secure: optional
