--- a/cron.yaml
+++ b/cron.yaml
@@ -1,6 +1,9 @@
 #Kopimi -- No license.
 
 cron:
-- description: tracker status verification
-  url: /tasks/trackerStatus
-  schedule: every 15 minutes
+#- description: tracker status verification
+#  url: /tasks/trackerStatus
+#  schedule: every 15 minutes
+- description: list update
+  url: /tasks/getTrackOnList
+  schedule: every 1 minutes
