--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,9 @@ version: 1
 runtime: python
 api_version: 1
 
+derived_file_type:
+- python_precompiled
+
 handlers:
 - url: /favicon.ico
   static_files: s/favicon.ico
